# pypharmaco

./: LICENSE  README.md  build.sh  dockerfile  pyproject.toml  setup.py
env_parser/: __init__.py
pypharmaco/env_parser/: entry_parser.py  exceptions.py  parser.py
pypharmaco/structure/: __init__.py  field.py  section.py
pypharmaco/web_socket/: __init__.py  consumer.py  exceptions.py  loop.py  props.py  section.py  sys_call.py
structure/: __init__.py  field.py  section.py
web_socket/: loop.py
