[tool.poetry]
name = "pypharmaco"
version = "0.1.0"
description = ""
authors = ["Jonathan Willianto <jowillianto@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
typing-extensions = "4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
